# azcam-app

./: README.md  pyproject.toml
.github/workflows/: publish_to_pypi.yaml  pypi_auto_publish.yaml  pypi_publish.yaml
azcam_app/: __init__.py  __main__.py  ipython_config.py
docs/: _config.yml  index.md
support/: start_azcamapp.py
