[project]
dependencies = ["azcam", "ipython", "matplotlib"]
name = "azcam-app"
version = "26.0.1"
description = "azcam-app package for controlling imaging systems"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["imaging", "astronomy", "cameras"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser.az@gmail.com" }]
[project.urls]
Documentation = "https://mplesser.github.io/azcam-app/"
Repository = "https://github.com/mplesser/azcam-app/"

[project.scripts]
azcamapp = "azcam_app.__main__:main"

[build-system]
requires = ["flit_core >= 3.12.0, <4"]
build-backend = "flit_core.buildapi"
